log
Thu May  5 11:22:29 HSP 2022: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
8c80338
Thu May  5 11:23:44 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
9010ccc
Thu May  5 11:28:02 HSP 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
65200ee
Thu May  5 11:28:40 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
a6471cc
Thu May  5 11:37:55 HSP 2022: 
 heap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
6b3db3b
Thu May  5 11:51:52 HSP 2022: 
 heap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  2|2
total_score: 20/70
62ecf00
Thu May  5 11:56:57 HSP 2022: 
 heap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
7d366b6
Thu May  5 12:01:09 HSP 2022: 
 heap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|2
total_score: 20/70
b43b1ff
Thu May  5 12:02:27 HSP 2022: 
 heap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|2
total_score: 20/70
7882976
Thu May  5 12:10:16 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
ae45f69
Thu May  5 12:11:01 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
3697cfa
Thu May  5 12:11:26 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
db28c94
Thu May  5 12:13:40 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
8721833
Thu May  5 12:14:53 HSP 2022: 
 heap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
6581549
Thu May  5 12:17:06 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
90c25d2
Thu May  5 12:17:37 HSP 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
ad28974
Thu May  5 12:26:37 HSP 2022: 
 heap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:40:4: error: expected ',' or ';' before 'printf'
    printf("prioridad antes de while: ");
    ^~~~~~
Compilation failed
0373818
Thu May  5 12:26:47 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
b801b8e
Thu May  5 23:30:51 HSP 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
prioridad durantcc922c6
Sat May  7 20:14:32 HSP 2022: 
 heap.c | 15 ++++-----------
 1 file changed, 4 insertions(+), 11 deletions(-)
 tests:  3|2
total_score: 25/70
61c5f6d
Sat May  7 20:15:55 HSP 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
af439d0
Sat May  7 20:23:28 HSP 2022: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 25/70
8eff6e8
